package edu.hitsz.aircraft;

public interface EnemyAircraftFactory {
    public EnemyAction createEnemyAircraft();
}
